Hiding flexslider image control on mobile to prevent it going in to text

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -968,6 +968,9 @@ div.user-picture > img{
 		float:right!important;
 		margin: 0 1em 0 0;
 	}
+.view-awards-slider .flexslider ol.flex-control-nav.flex-control-paging{
+		display:none;
+	}
 }
 
 @media screen and (min-width: 768px) {
@@ -1005,6 +1008,10 @@ div.user-picture > img{
 .view-about-us-resources .view-content{
 	display: flex;
 	flex-wrap:wrap;
+}
+
+.view-awards-slider .flexslider ol.flex-control-nav.flex-control-paging{
+	display: block;
 }
 
 .view-location-directory .chosen-container-single
